--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,11 @@ body {
 }
 
 /* Article signup styles */
+/*
 main {
-    /*width: 37.5rem;*/
+  width: 37.5rem;
 }
+  */
 .signup {
   background-color: var(--white);
   min-width: 30rem;
@@ -87,11 +89,11 @@ main {
 }
 
 .signup__wrapper {
-  padding: 4.2rem 2rem 3.2rem 2rem;
+  margin: 4.2rem 2rem 3.2rem 2rem;
 }
 .signup__content {
-     margin-bottom: 4rem;
-    }
+  margin-bottom: 4rem;
+}
 .signup__title {
   font-size: 3.6rem;
   font-weight: 700;
@@ -122,21 +124,21 @@ main {
 
 /* Cta styles */
 
-
-
 .signup__label {
   font-size: 1.2rem;
   font-weight: 700;
-  display: block;
-  margin-bottom: 1rem;
 }
-
+.signup__error {
+    display: inline-block;
+    margin-left:  auto;
+}
 .signup__input {
   width: 100%;
   padding: 1.6rem;
   display: block;
   border: 1px solid var(--grey);
   border-radius: 5px;
+  margin-top: 2rem;
   margin-bottom: 2.4rem;
 }
 .signup__submit-btn {
@@ -168,29 +170,21 @@ main {
 
 @media (min-width: 48rem) {
   .signup {
- padding: 3.2rem;
-    padding-bottom: 6rem;
-    border-radius: 25px;
+    padding: 2rem;
+    border-radius: 30px;  
   }
-  .signup__header {
-    height: 100%;
-  }
-  .signup__image {
-    height: 100%;
-  }
-
   .signup__form-container {
     flex-direction: row-reverse;
+    align-items: center;
     gap: 4rem;
-  }
-  .signup__content {
-    
-  }
-  .signup__title {
+}
+.signup__wrapper {
+    padding: 0 4rem;
+    max-width: 50%;
+}
+.signup__title {
     font-size: 5.6rem;
-    
-  }
-  .signup__cta {
-  
-  }
+    margin-bottom: 3.2rem;
+}
+
 }
