--- a/styles.css
+++ b/styles.css
@@ -124,21 +124,29 @@ main {
 
 /* Cta styles */
 
+.signup__label-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem; 
+  }
+
 .signup__label {
   font-size: 1.2rem;
   font-weight: 700;
+  
 }
 .signup__error {
-    display: inline-block;
-    margin-left:  auto;
-}
+    font-size: 1.2rem;
+    color: red; 
+  }
+
 .signup__input {
   width: 100%;
   padding: 1.6rem;
   display: block;
   border: 1px solid var(--grey);
   border-radius: 5px;
-  margin-top: 2rem;
   margin-bottom: 2.4rem;
 }
 .signup__submit-btn {
