--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
   line-height: 1;
   letter-spacing: 0px;
   min-height: 100vh;
-  background-color: var(--charcoal-grey);
+  background-color: lightyellow;
   display: flex;
   flex-direction: column;
   justify-content: center;
